@@ -1,3 +1,8 @@
+2014-02-28  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* perllib/Torrus/DevDiscover/CiscoGeneric.pm (discover):
+	64-bit gauges for Cisco memory pools
+
 2014-02-17  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* perllib/Torrus/ConfigTree/Writer.pm (initRoot): new parameter:
